2014-05-13 Matrices: Added is.positive.definite, is.symmetric.matrix, and tr
2014-05-13 Distributions: Added dmvn and dmvnc
2014-05-12 Distributions: Added dhalfcauchy
2014-05-12 Added partial (well, partially)
2014-05-10 Distributions: Added dwishart and rwishart
2014-05-10 Added interval
2014-05-10 LaplacesDemonCpp was created.