@@ -4,9 +4,15 @@ export(dhalfcauchy,
        dmvn,
        dmvnc,
        dwishart,
+       dwishartc,
        interval,
        is.positive.definite,
        is.symmetric.matrix,
        partial,
+       rmvn,
+       rmvnc,
+       rmvnp,
+       rmvnpc,
        rwishart,
+       rwishartc,
        tr)
