@@ -9,7 +9,7 @@ LaplacesDemonCpp imports LaplacesDemon, Rcpp, and RcppArmadillo.
 
 To use LaplacesDemonCpp, simply activate the LaplacesDemonCpp library, and any C++ functions here will replace the R functions in LaplacesDemon.
 
-This package should be considered experimental until further along in development.
+This package should be considered experimental until further along in development. The optimization of C++ functions will improve with time.
 
 # Installation #
 ---
