@@ -37,7 +37,7 @@ SEXP dmvn(SEXP X, SEXP MU, SEXP SIGMA, SEXP LOGD) {
   double rootisum = arma::sum(log(rooti.diag()));
   double log2pi = std::log(2.0 * M_PI);
   double constants = -(static_cast<double>(k)/2.0) * log2pi;
-  for (int i=0; i < n; i++) {
+  for (int i = 0; i < n; i++) {
     arma::vec z = rooti * arma::trans(x.row(i) - mu.row(i));
     dens[i] = constants + rootisum - 0.5 * arma::sum(z%z);
   }
@@ -45,8 +45,17 @@ SEXP dmvn(SEXP X, SEXP MU, SEXP SIGMA, SEXP LOGD) {
   return(wrap(dens));
 }
 
+SEXP rmvn(SEXP MU, SEXP SIGMA) {
+  arma::mat mu = as<arma::mat>(MU);
+  arma::mat Sigma = as<arma::mat>(SIGMA);
+  int n = mu.n_rows;
+  RNGScope scope;
+  arma::mat z = arma::randn(n, Sigma.n_cols);
+  return wrap(mu + z * arma::chol(Sigma));
+}
+
 /*------------------------------------------------------------------------/
-/ Multivariate Normal Distribution: Cholesky Parameterization             /
+/ Multivariate Normal Distribution (Cholesky Parameterization)            /
 /------------------------------------------------------------------------*/
 
 SEXP dmvnc(SEXP X, SEXP MU, SEXP u, SEXP LOGD) {
@@ -69,6 +78,41 @@ SEXP dmvnc(SEXP X, SEXP MU, SEXP u, SEXP LOGD) {
   return(wrap(dens));
 }
 
+SEXP rmvnc(SEXP MU, SEXP u) {
+  arma::mat mu = as<arma::mat>(MU);
+  arma::mat U = as<arma::mat>(u);
+  int n = mu.n_rows;
+  RNGScope scope;
+  arma::mat z = arma::randn(n, U.n_cols);
+  return wrap(mu + z * U);
+}
+
+/*------------------------------------------------------------------------/
+/ Multivariate Normal Distribution (Precision Parameterization)           /
+/------------------------------------------------------------------------*/
+
+SEXP rmvnp(SEXP MU, SEXP OMEGA) {
+  arma::mat mu = as<arma::mat>(MU);
+  arma::mat Omega = as<arma::mat>(OMEGA);
+  int n = mu.n_rows;
+  RNGScope scope;
+  arma::mat z = arma::randn(n, Omega.n_cols);
+  return wrap(mu + z * arma::chol(arma::inv(Omega)));
+}
+
+/*------------------------------------------------------------------------/
+/ Multivariate Normal Distribution (Precision-Cholesky Parameterization)  /
+/------------------------------------------------------------------------*/
+
+SEXP rmvnpc(SEXP MU, SEXP u) {
+  arma::mat mu = as<arma::mat>(MU);
+  arma::mat U = as<arma::mat>(u);
+  int n = mu.n_rows;
+  RNGScope scope;
+  arma::mat z = arma::randn(n, U.n_cols);
+  return wrap(mu + z * arma::inv(arma::trans(U)));
+}
+
 /*------------------------------------------------------------------------/
 / Wishart Distribution                                                    /
 /------------------------------------------------------------------------*/
@@ -81,7 +125,7 @@ SEXP dwishart(SEXP OMEGA, SEXP NU, SEXP s, SEXP LOGD) {
   int k = Omega.n_rows;
   double dens = 0, gamsum = 0;
   for (int i = 0; i < k; i++) {
-    gamsum += lgamma((nu + 1 - i) / 2.0);
+    gamsum += lgamma((nu + 1.0 - i + 1.0) / 2.0);
   }
   dens = -((nu * k) / 2.0) * log(2.0) - ((k * (k - 1.0)) / 4.0) * 
     log(M_PI) - gamsum - (nu / 2.0) * log(arma::det(S)) + 
@@ -92,6 +136,44 @@ SEXP dwishart(SEXP OMEGA, SEXP NU, SEXP s, SEXP LOGD) {
 }
 
 SEXP rwishart(SEXP NU, SEXP s) {
+  Rcpp::NumericVector nu(NU);
+  arma::mat S = as<arma::mat>(s);
+  arma::mat CC = arma::chol(S);
+  int n = S.n_cols;
+  arma::mat x = arma::randn(n, n);
+  for (int i = 0; i < n; i++) {
+    x.diag()[i] = sqrt(as<double>(rchisq(1, nu[i])));
+  }
+  x = arma::trimatu(x);
+  x = x * CC;
+  x = arma::trans(x) * x;
+  return wrap(x);
+}
+
+/*------------------------------------------------------------------------/
+/ Wishart Distribution (Cholesky Parameterization)                        /
+/------------------------------------------------------------------------*/
+
+SEXP dwishartc(SEXP u, SEXP NU, SEXP s, SEXP LOGD) {
+  arma::mat U = as<arma::mat>(u);
+  arma::mat Omega = arma::trans(U) * U;
+  double nu = as<double>(NU);
+  arma::mat S = as<arma::mat>(s);
+  bool logd = as<bool>(LOGD);
+  int k = Omega.n_rows;
+  double dens = 0, gamsum = 0;
+  for (int i = 0; i < k; i++) {
+    gamsum += lgamma((nu + 1.0 - i + 1.0) / 2.0);
+  }
+  dens = -((nu * k) / 2.0) * log(2.0) - ((k * (k - 1.0)) / 4.0) * 
+    log(M_PI) - gamsum - (nu / 2.0) * log(arma::det(S)) + 
+    ((nu - k - 1.0) / 2.0) * log(arma::det(Omega)) - 
+    (arma::trace(arma::inv(S) * Omega) / 2.0);
+  if (logd == false) dens = exp(dens);
+  return wrap(dens);
+}
+
+SEXP rwishartc(SEXP NU, SEXP s) {
   Rcpp::NumericVector nu(NU);
   arma::mat S = as<arma::mat>(s);
   arma::mat CC = arma::chol(S);
