@@ -34,6 +34,50 @@ RcppExport SEXP dwishart(SEXP OMEGA, SEXP NU, SEXP s, SEXP LOGD);
 
 #endif
 
+#ifndef _LaplacesDemonCpp_dwishartc_H
+#define _LaplacesDemonCpp_dwishartc_H
+
+#include <RcppArmadillo.h>
+
+RcppExport SEXP dwishartc(SEXP u, SEXP NU, SEXP s, SEXP LOGD);
+
+#endif
+
+#ifndef _LaplacesDemonCpp_rmvn_H
+#define _LaplacesDemonCpp_rmvn_H
+
+#include <RcppArmadillo.h>
+
+RcppExport SEXP rmvn(SEXP MU, SEXP SIGMA);
+
+#endif
+
+#ifndef _LaplacesDemonCpp_rmvnp_H
+#define _LaplacesDemonCpp_rmvnp_H
+
+#include <RcppArmadillo.h>
+
+RcppExport SEXP rmvnp(SEXP MU, SEXP OMEGA);
+
+#endif
+
+#ifndef _LaplacesDemonCpp_rmvnc_H
+#define _LaplacesDemonCpp_rmvnc_H
+
+#include <RcppArmadillo.h>
+
+RcppExport SEXP rmvnc(SEXP MU, SEXP u);
+
+#endif
+
+#ifndef _LaplacesDemonCpp_rmvnpc_H
+#define _LaplacesDemonCpp_rmvnpc_H
+
+#include <RcppArmadillo.h>
+
+RcppExport SEXP rmvnpc(SEXP MU, SEXP u);
+
+#endif
 
 #ifndef _LaplacesDemonCpp_rwishart_H
 #define _LaplacesDemonCpp_rwishart_H
@@ -41,5 +85,14 @@ RcppExport SEXP dwishart(SEXP OMEGA, SEXP NU, SEXP s, SEXP LOGD);
 #include <RcppArmadillo.h>
 
 RcppExport SEXP rwishart(SEXP NU, SEXP s);
+
+#endif
+
+#ifndef _LaplacesDemonCpp_rwishartc_H
+#define _LaplacesDemonCpp_rwishartc_H
+
+#include <RcppArmadillo.h>
+
+RcppExport SEXP rwishartc(SEXP NU, SEXP s);
 
 #endif
